# 3-svg-coloring-beta

./: README.md  app.py  pyproject.toml  test.py  test.sh
data/test_cases/: output.json  output.txt
svg_color/: config.py
svg_color.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
svg_color/application/: services.py
svg_color/core/: __init__.py  svg_element_parser.py  svg_processor.py
svg_color/domain/: models.py
svg_color/infrastructure/: __init__.py  file_gateway.py  logging_config.py
svg_color/presentation/: __init__.py  app_state.py  validators.py
svg_color/presentation/render/: __init__.py  find_tab.py  process_tab.py  sidebar.py
svg_color/utils/: color_utils.py  svg_utils.py  ui_utils.py
svg_color/utils/geo_utils/: __init__.py  bbox.py  calc_rep.py  get_color_from_rep.py  polygon.py
